--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -346,7 +346,7 @@
                             });
                         }
                         document.querySelector('td[name=authName]').click();
-                        OverlayScrollbars(document.querySelector('.list-body'), {className: 'scrollbar'});
+                        OverlayScrollbars(document.querySelector('.z-list-body'), {className: 'scrollbar'});
                     } else {
                         onCreate();
                     }
