--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -27,7 +27,7 @@
         </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="boardAdminList"></div>
+    <div class="z-list-content" id="boardAdminList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -57,7 +57,7 @@
             callbackFunc: function(response) {
                 document.getElementById('boardAdminList').innerHTML = response.responseText;
                 setDateTimeFormat(document.getElementById('boardAdminList'));
-                OverlayScrollbars(document.querySelector('.list-body'), {
+                OverlayScrollbars(document.querySelector('.z-list-body'), {
                     className: 'scrollbar'
                 });
             },
