--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -29,7 +29,7 @@
     </form>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="ciList"></div>
+    <div class="z-list-content" id="ciList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -123,7 +123,7 @@
                     ciDetailModal.show();
                 } else {
                     document.getElementById('ciList').innerHTML = response.responseText;
-                    OverlayScrollbars(document.querySelector('.list-body'), {
+                    OverlayScrollbars(document.querySelector('.z-list-body'), {
                         className: 'scrollbar'
                     });
                 }
