--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="customCodeList"></div>
+    <div class="z-list-content" id="customCodeList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -54,7 +54,7 @@
             callbackFunc: function(response) {
                 document.getElementById('customCodeList').innerHTML = response.responseText;
                 setDateTimeFormat(document.getElementById('customCodeList'));
-                OverlayScrollbars(document.querySelector('.list-body'), {
+                OverlayScrollbars(document.querySelector('.z-list-body'), {
                     className: 'scrollbar'
                 });
             },
