--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -5,9 +5,7 @@
     layout:decorate="layout/itsm/pageType/pagingListLayout">
 <head>
     <title th:text="#{form.label.form}"></title>
-    <th:block layout:fragment="pageHead">
-        <!--<script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>-->
-    </th:block>
+    <th:block layout:fragment="pageHead"></th:block>
 </head>
 <body>
 <div layout:fragment="pageTitle">
@@ -29,7 +27,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="formList"></div>
+    <div class="z-list-content" id="formList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -403,7 +401,7 @@
             callbackFunc: function(response) {
                     document.getElementById('formList').innerHTML = response.responseText;
                     setDateTimeFormat(document.getElementById('formList'));
-                    OverlayScrollbars(document.querySelector('.list-body'), {
+                    OverlayScrollbars(document.querySelector('.z-list-body'), {
                         className: 'scrollbar'
                     });
             }
