--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -382,7 +382,7 @@
                         if (ruleList.length > 0) {
                             document.querySelector('td[name=ruleName]').click();
                         }
-                        OverlayScrollbars(document.querySelector('.list-body'), {className: 'scrollbar'});
+                        OverlayScrollbars(document.querySelector('.z-list-body'), {className: 'scrollbar'});
                     } else {
                         onCreate();
                     }
