--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -245,7 +245,7 @@
                     }
                 }
                 // 스크롤바
-                OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
+                OverlayScrollbars(document.querySelector('.z-list-body'), { className: 'scrollbar' });
             }, null, showProgressbar);
         }
 
