--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -19,9 +19,6 @@
 
 // portal 디자인
 @mixin portalHeader() {
-  padding: 0 0 0 13.75rem; // 220px
-  background-color: $main-header-bg-color;
-  @include border(0.0625rem, solid, $main-header-border-color, bottom); // 1px
   // 제목
   .header-title {
     height: 10.625rem; // 170px
@@ -121,7 +118,7 @@
 }
 // pagingListTemplate
 @mixin pagingListTemplate() {
-  .list {
+  .z-list {
     a, button { cursor: pointer; }
     &-content {
       display: flex;
