--- a/src/main/resources/public/template/auth/authList.html
+++ b/src/main/resources/public/template/auth/authList.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <table class="list-table">
-        <thead class="list-head">
+    <table class="z-list-content">
+        <thead class="z-list-head">
             <tr class="flex-row align-items-center">
                 <th style="width:25%;" class="align-left" th:text="#{auth.label.authName}"></th>
                 <th style="width:25%;" class="align-left" th:text="#{auth.label.authId}"></th>
                 <th style="width:50%;" class="align-left" th:text="#{auth.label.authDesc}"></th>
             </tr>
         </thead>
-        <tbody class="list-body">
+        <tbody class="z-list-body">
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
                 <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
