--- a/src/main/resources/public/template/board/boardList.html
+++ b/src/main/resources/public/template/board/boardList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="list-table">
-    <thead class="list-head">
+<table class="z-list-content">
+    <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width: 65%" class="align-left" th:text="#{board.label.name}"></th>
             <th style="width: 10%" class="align-left" th:text="#{board.label.count}"></th>
@@ -14,7 +14,7 @@
             <th style="width: 15%" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
-    <tbody class="list-body">
+    <tbody class="z-list-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(boardAdminList)}">
             <td style="width:100%" colspan="5" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
