--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -39,7 +39,7 @@
 </div>
 <div layout:fragment="pageList">
     <input type="hidden" id="deletable" th:value="${#authorization.expression('hasAuthority(''chart.delete'')')}"/>
-    <div class="list-content" id="chartList"></div>
+    <div class="z-list-content" id="chartList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -83,7 +83,7 @@
             callbackFunc: function (response) {
                 document.getElementById('chartList').innerHTML = response.responseText;
                 setDateTimeFormat(document.getElementById('chartList'));
-                OverlayScrollbars(document.querySelector('.list-body'), {
+                OverlayScrollbars(document.querySelector('.z-list-body'), {
                     className: 'scrollbar'
                 });
             }
