--- a/src/main/resources/public/template/cmdb/attribute/attributeList.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="list-table">
-    <thead class="list-head">
+<table class="z-list-content">
+    <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.name}"></th>
             <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.label}"></th>
@@ -14,7 +14,7 @@
             <th style="width: 30%" class="align-left" th:text="#{cmdb.attribute.label.description}"></th>
         </tr>
     </thead>
-    <tbody class="list-body">
+    <tbody class="z-list-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(attributeList)}">
             <td style="width:100%" colspan="4" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
