--- a/src/main/resources/public/template/cmdb/class/classList.html
+++ b/src/main/resources/public/template/cmdb/class/classList.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="list-table">
-    <thead class="list-head">
+<table class="z-list-content">
+    <thead class="z-list-head">
     <tr class="flex-row align-items-center">
         <th style="width:33%;" class="align-left" th:text="#{cmdb.class.label.name}"></th>
         <th style="width:33%;" class="align-left" th:text="#{cmdb.class.label.description}"></th>
         <th style="width:34%;" class="align-left" th:text="#{cmdb.class.label.pClassName}"></th>
     </tr>
     </thead>
-    <tbody class="list-body">
+    <tbody class="z-list-body">
     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(classList)}">
         <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
