--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="faqList"></div>
+    <div class="z-list-content" id="faqList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -51,7 +51,7 @@
             showProgressbar: false,
             callbackFunc: function (response) {
                 document.getElementById('faqList').innerHTML = response.responseText
-                OverlayScrollbars(document.querySelector('.list-body'), {
+                OverlayScrollbars(document.querySelector('.z-list-body'), {
                     className: 'scrollbar'
                 });
             }
