--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="list-table">
-    <thead class="list-head">
+<table class="z-list-content">
+    <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width: 20%" class="align-left" th:text="#{process.label.name}"></th>
             <th style="width: 10%" class="align-center" th:text="#{process.label.simulation}"></th>
@@ -17,7 +17,7 @@
             <th style="width: 12%" class="align-left" th:text="#{common.label.writeDate}"></th>
         </tr>
     </thead>
-    <tbody class="list-body">
+    <tbody class="z-list-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(processList)}">
             <td style="width:100%" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
