--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list-content" id="processList"></div>
+    <div class="z-list-content" id="processList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -436,7 +436,7 @@
             callbackFunc: function(response) {
                     document.getElementById('processList').innerHTML = response.responseText;
                     setDateTimeFormat(document.getElementById('processList'));
-                    OverlayScrollbars(document.querySelector('.list-body'), {
+                    OverlayScrollbars(document.querySelector('.z-list-body'), {
                         className: 'scrollbar'
                     });
             }
