--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -148,7 +148,7 @@
                 getRoleList(false);
             });
 
-            OverlayScrollbars(document.querySelector('.list-body'), { className: 'scrollbar' });
+            OverlayScrollbars(document.querySelector('.z-list-body'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelector('.role-content-edit'), { className: 'scrollbar' });
             Array.prototype.forEach.call(document.querySelectorAll('.z-checkbox-list'), function(target) {
                 OverlayScrollbars(target, { className: 'inner-scrollbar' });
@@ -382,7 +382,7 @@
                         if (roleList.length > 0) {
                             document.querySelector('td[name=roleName]').click();
                         }
-                        OverlayScrollbars(document.querySelector('.list-body'), { className: 'inner-scrollbar' });
+                        OverlayScrollbars(document.querySelector('.z-list-body'), { className: 'inner-scrollbar' });
                     } else {
                         onCreate();
                     }
