--- a/src/main/resources/public/template/scheduler/schedulerView.html
+++ b/src/main/resources/public/template/scheduler/schedulerView.html
@@ -170,7 +170,7 @@
                         for (let i = 0; i < executeTimeEle.length; i++) {
                             executeTimeEle[i].textContent = i18n.userDateTime(executeTimeEle[i].textContent);
                         }
-                        OverlayScrollbars(document.querySelector('.list-body'), {className: 'scrollbar'});
+                        OverlayScrollbars(document.querySelector('.z-list-body'), {className: 'scrollbar'});
                     });
                 }
             };
