--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="list-table">
-    <thead class="list-head">
+<table class="z-list-content">
+    <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:3.2%;"></th>
             <th style="width:9.8%;" class="align-left" th:text="#{user.label.name}"></th>
@@ -19,7 +19,7 @@
             <th style="width:15%;" class="align-left" th:text="#{user.label.signUpDate}"></th>
         </tr>
     </thead>
-    <tbody class="list-body">
+    <tbody class="z-list-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(userList)}">
             <td style="width:100%" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
